--- a/angular.json
+++ b/angular.json
@@ -23,6 +23,7 @@
               "src/assets"
             ],
             "styles": [
+              { "input":"src/my-theme.scss" },
               "src/styles.css"
             ],
             "scripts": []
