--- a/package.json
+++ b/package.json
@@ -11,16 +11,25 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~7.1.0",
+    "@angular/animations": "^7.1.3",
+    "@angular/cdk": "^7.1.1",
     "@angular/common": "~7.1.0",
     "@angular/compiler": "~7.1.0",
     "@angular/core": "~7.1.0",
     "@angular/forms": "~7.1.0",
+    "@angular/material": "^7.1.1",
     "@angular/platform-browser": "~7.1.0",
     "@angular/platform-browser-dynamic": "~7.1.0",
     "@angular/router": "~7.1.0",
+    "angular-fusioncharts": "^3.0.1",
+    "angular2-cookie": "^1.2.6",
     "core-js": "^2.5.4",
+    "fusioncharts": "^3.13.3-sr.1",
+    "hammerjs": "^2.0.8",
+    "ngx-cookie-service": "^2.1.0",
+    "node-sass": "^6.0.0",
     "rxjs": "~6.3.3",
+    "sass-loader": "^12.0.0",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.26"
   },
